Adds alt for all images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-12  about-row">
             <h3 class="text-center mt-5 font-weight-bold font-italic about-h3">MEET OSMAN</h3>
-            <p class="word-wrap about-text">Hello, I'm Osman Kamara, a Full-Stack web developer absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
+            <p class="word-wrap about-text">Hello, I'm Osman Kamara, a Full-Stack web developer, who is absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
     
               I believe continuous learning is a direct path to mastery, and growth, in all areas of one's life, including the subjective. Hence, the continual education on things I'm passionate about(web development), is very important to me, and something I enjoy doing tremendously! See more of my work at github.com/osmankbk 
               
@@ -109,14 +109,14 @@
               <h1 class="mb-4 text-center text-light pb-solid">WebApp Dashboard</h1>
               <div class="row modal-row">
                 <div class="col-lg-6 p-*-5 modal-view">
-                  <img class="rotate-img-div" src="images/wapp.png" alt="">
+                  <img class="rotate-img-div" src="images/wapp.png" alt="screen shot image">
                 </div>
                 <div class="col-lg-6 wepapp-modal-view">
                   <p class="word-wrap text-light modal-text">A WebApp Application(without the backend functionalities) with a dashboard that acts like a controll panel that lets users create profiles, 
                     look at browsing history, get notification on things that needs to get done, and interract with other users via messaging. I built this web app with <span>HTML</span> for skeleton, <span>CSS</span> for design, <span>SASS</span>
                     for ease of organization & layout, & <span>JavaScript</span> for functionality.
-                    <a class="d-block" href="" target="_blank">Click For Live Version</a>
-                    <a class="d-block" href="" target="_blank">Click For Github Repo</a>
+                    <a class="d-block" href="https://osmankbk.github.io/WebApp-Dashboard/" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="https://github.com/osmankbk/WebApp-Dashboard/tree/main" target="_blank">Click For Github Repo</a>
                   </p>
                 </div>
               </div>
@@ -131,7 +131,7 @@
               <h1 class="mb-4 text-center text-light pb-solid">Full Stack App with React and a REST-API</h1>
               <div class="row modal-row">
                 <div class="col-lg-6 p-*-5 modal-view">
-                  <img class="rotate-img-div" src="images/fsk.png" alt="">
+                  <img class="rotate-img-div" src="images/fsk.png" alt="screen shot image">
                 </div>
                 <div class="col-lg-6 fsk-modal-view">
                   <p class="word-wrap text-light modal-text">Created a full-stack school database application, that users can interact with by getting a list of courses, 
@@ -139,8 +139,8 @@
                     of one requires a logging in/signing up for an accout. Only the owner of a course can make changes to it(Update, Delete etc). I achieved this through
                     Node.js & Express Authentication mechanish, monitoring who is accessing & controlling what they can do. I built the frontend functionalities with <span>React</span>, <span>JSX</span>, & <span>React Context API.</span>
                     The backend; With <span>Node.js</span>, <span>Express</span> and <span> SQL</span>.
-                    <a class="d-block" href="" target="_blank">Click For Live Version</a>
-                    <a class="d-block" href="" target="_blank">Click For Github Repo</a>
+                    <a class="d-block" href="https://course-react-app.web.app/courses" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="https://github.com/osmankbk/Full-Stack-React-REST-API-App" target="_blank">Click For Github Repo</a>
                   </p>
                 </div>
               </div>
@@ -154,7 +154,7 @@
               <h1 class="mb-4 text-center text-light pb-solid">Awesome Startup Employee API Directory</h1>
               <div class="row modal-row">
                 <div class="col-lg-6 p-*-5 modal-view">
-                  <img class="rotate-img-div" src="images/emp.png" alt="">
+                  <img class="rotate-img-div" src="images/emp.png" alt="screen shot image">
                 </div>
                 <div class="col-lg-6 fsk-modal-view">
                   <p class="word-wrap text-light modal-text">This is an employee directory I built using <span>HTML</span> and <span>CSS</span> to design and style it.
@@ -175,15 +175,15 @@
               <h1 class="mb-4 text-center text-light pb-solid modal-headings">Game Show App</h1>
               <div class="row modal-row">
                 <div class="col-lg-6 p-*-5 modal-view">
-                  <img class="rotate-img-div popup-images" src="images/game.png" alt="">
+                  <img class="rotate-img-div popup-images" src="images/game.png" alt="screen shot image">
                 </div>
                 <div class="col-lg-6 fsk-modal-view">
                   <p class="word-wrap text-light modal-text">In this project, I created a browser version of "Wheel of fortune", a word guessing game where players will click letters from an
                      onscreen or physical keyboard to try to guess a random phrase. I create an array of phrases and write functions to choose a random phrase from that array, split 
                      the phrase into letters, and put those letters onto the game board, giving it the required functionalities using <span>JavaScript</span>. Built the skeleton/layout of the game app with
                     <span>HTML</span>, style & design it with <span>CSS.</span>
-                    <a class="d-block" href="" target="_blank">Click For Live Version</a>
-                    <a class="d-block" href="" target="_blank">Click For Github Repp</a></p>
+                    <a class="d-block" href="https://osmankbk.github.io/Game-Show-App/" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="https://github.com/osmankbk/Game-Show-App/tree/main" target="_blank">Click For Github Repp</a></p>
                 </div>
               </div>
             </div>
@@ -194,19 +194,19 @@
           <div class="col-lg order-lg-12 cube-container">
             <div class="port-div photo-cube">
               <div class="front">
-                <img class="rotate-img-div" src="images/wapp.png" alt="">
+                <img class="rotate-img-div" src="images/wapp.png" alt="screen shot image">
                 <button type="button" class="btn view-details front-button" data-toggle="modal" data-target=".bd-example-modal-lg">View Details</button>
               </div>
               <div class="back">
-                <img class="rotate-img-div" src="images/fsk.png" alt="">
+                <img class="rotate-img-div" src="images/fsk.png" alt="screen shot image">
                 <button type="button" class="btn view-details back-button" data-toggle="modal" data-target=".bd-backexample-modal-lg">View Details</button>
               </div>
               <div class="left">
-                <img class="rotate-img-div" src="images/emp.png" alt="">
+                <img class="rotate-img-div" src="images/emp.png" alt="screen shot image">
                 <button type="button" class="btn view-details left-button" data-toggle="modal" data-target=".bd-leftexample-modal-lg">View Details</button>
               </div>
               <div class="right">
-                <img class="rotate-img-div" src="images/game.png" alt="">
+                <img class="rotate-img-div" src="images/game.png" alt="screen shot image">
                 <button type="button" class="btn view-details right-button" data-toggle="modal" data-target=".bd-rightexample-modal-lg">View Details</button>
               </div>
             </div>            
@@ -217,8 +217,8 @@
         <div id="contact" class="container-fluid contact text-center"> <!-- CONTACT --> 
           <h3 class="display-2 text-center pt-3 pb-5 font-weight-bold text-uppercase contact-h3">GET IN TOUCH</h3>
           <p class="display-4 mt-5 font-italic reach-me">Reach Me Via Social Media</p>
-          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mr-3" src="images/linkedIn.png" alt=""></a>
-          <a href="https://github.com/osmankbk" target="_blank"> <img class="github ml-3" src="images/github.png" alt=""></a>
+          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mr-3" src="images/linkedIn.png" alt="screen shot image"></a>
+          <a href="https://github.com/osmankbk" target="_blank"> <img class="github ml-3" src="images/github.png" alt="screen shot image"></a>
           <p class="display-4 mt-3 font-italic email-me">Send Me An Email</p>
           <a class="text-center display-4 text-wrap word-wrap d-block font-weight-bold text-dark text-uppercase email" href="mailto:mackiekbk@yahoo.com">mackiekbk@yahoo.com</a>
         </div> <!-- /CONTACK --> 
