Adds id to all modal for aria-labelledby value use

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div id="portfolio" class="pt-5"> <!-- PORTFOLIO --> 
         <h3 class="display-2 text-center pt-5 font-weight-bold font-italic portfolio-h3 text-uppercase">Portfolio</h3>
 
-        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"> <!-- Wepapp modalview --> 
+        <div id="large-modal4" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="large-modal4" aria-hidden="true"> <!-- Wepapp modalview --> 
           <div class="modal-dialog modal-lg">
             <div class="modal-content wepapp-modal-content">
               <h1 class="mb-4 text-center text-light pb-solid">WebApp Dashboard</h1>
@@ -125,7 +125,7 @@
           </div>
         </div> <!-- /Wepapp modal view --> 
 
-        <div class="modal fade bd-backexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div id="large-modal3" class="modal fade bd-backexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="large-modal3" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content fsk-modal-content">
               <h1 class="mb-4 text-center text-light pb-solid">Full Stack App with React and a REST-API</h1>
@@ -148,7 +148,7 @@
           </div>
         </div>
 
-        <div class="modal fade bd-leftexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div id="large-modal2" class="modal fade bd-leftexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="large-modal2" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content api-modal-content">
               <h1 class="mb-4 text-center text-light pb-solid">Awesome Startup Employee API Directory</h1>
@@ -169,7 +169,7 @@
           </div>
         </div>
 
-        <div class="modal fade bd-rightexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div id="large-modal" class="modal fade bd-rightexample-modal-lg" tabindex="-1" role="dialog" aria-labelledby="large-modal" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content game-modal-content">
               <h1 class="mb-4 text-center text-light pb-solid modal-headings">Game Show App</h1>
