--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
         <div id="contact" class="container-fluid contact text-center"> <!-- CONTACT --> 
           <h3 class="display-2 text-center pt-3 pb-5 font-weight-bold text-uppercase contact-h3">GET IN TOUCH</h3>
           <p class="display-4 mt-5 font-italic reach-me">Reach Me Via Social Media</p>
-          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mr-3" src="images/linkedIn.png" alt="screen shot image"></a>
-          <a href="https://github.com/osmankbk" target="_blank"> <img class="github ml-3" src="images/github.png" alt="screen shot image"></a>
+          <a href="https://www.linkedin.com/in/osman-kamara-1459881b0/" target="_blank"><img class="linkedin mr-3" src="images/linkedIn.png" alt="linkedIn icon"></a>
+          <a href="https://github.com/osmankbk" target="_blank"> <img class="github ml-3" src="images/github.png" alt="github icon"></a>
           <p class="display-4 mt-3 font-italic email-me">Send Me An Email</p>
           <a class="text-center display-4 text-wrap word-wrap d-block font-weight-bold text-dark text-uppercase email" href="mailto:mackiekbk@yahoo.com">mackiekbk@yahoo.com</a>
         </div> <!-- /CONTACK --> 
