Adds profile outside about text

--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
         <div class="begin-about-sec">
           <div class="col-12  about-row">
             <h3 class="text-center mt-5 font-weight-bold font-italic about-h3 meet-oz">MEET OSMAN</h3>
-            <div class="text-center">
+            <div class="fixit text-center">
               <p class="word-wrap about-text">Hello, I'm Osman Kamara, a Full-Stack web developer, who is absolutely in love with expressing oneself, animating my ideas and others through coding, and providing an engaging user experience of the highest order on all platforms.
     
                 I believe continuous learning is a direct path to mastery, and growth, in all areas of one's life, including the subjective. Hence, the continual education on things I'm passionate about(web development), is very important to me, and something I enjoy doing tremendously! See more of my work at github.com/osmankbk 
                 
                 looking forward to applying my previous work experience from various industries and my daily becoming web developer skills to a new career in tech.
                 </p>
-                <img src="images/rsz_img_0705.jpg" alt="">
+
+
+                <img class="profile-image" src="images/rsz_img_0705.jpg" alt="">
             </div>
           </div>
         </div>
