--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="col-lg order-lg-3">
             <h3 class="mb-4 font-weight-bold future">FUTURE LEARNINGS :</h3>
             <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action"><strong>Python</strong>: Currently Learning</a>
+              <a href="#" class="list-group-item list-group-item-action"><strong>Python</strong>: Currently Mastering</a>
               <a href="#" class="list-group-item list-group-item-action"><strong>Ruby On Rails</strong></a>
               <a href="#" class="list-group-item list-group-item-action"><strong>MangoDB</strong></a>
               <a href="#" class="list-group-item list-group-item-action"><strong>PHP</strong></a>
