--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     of one requires a logging in/signing up for an accout. Only the owner of a course can make changes to it(Update, Delete etc). I achieved this through
                     Node.js & Express Authentication mechanish, monitoring who is accessing & controlling what they can do. I built the frontend functionalities with <span>React</span>, <span>JSX</span>, & <span>React Context API.</span>
                     The backend; With <span>Node.js</span>, <span>Express</span> and <span> SQL</span>.
-                    <a class="d-block" href="https://course-react-app.web.app/courses" target="_blank">Click For Live Version</a>
+                    <a class="d-block" href="https://master-cour.web.app/courses" target="_blank">Click For Live Version</a>
                     <a class="d-block" href="https://github.com/osmankbk/Full-Stack-React-REST-API-App" target="_blank">Click For Github Repo</a>
                   </p>
                 </div>
